hphp/hack/test/typecheck/subtype_array2.php.exp
File "subtype_array2.php", line 20, characters 11-12:
Invalid argument (Typing[4110])
  File "subtype_array2.php", line 16, characters 25-28:
  Expected `bool`
  File "subtype_array2.php", line 12, characters 28-30:
  But got `int`
